Trying to fix zooming bug on mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -355,3 +355,9 @@ form > ul > li {
 		margin: 20px;
 	}
 }
+
+@media screen and (max-width: 370px) {
+	.hide {
+		display: none;
+	}
+}
